--- a/build.xml
+++ b/build.xml
@@ -35,7 +35,7 @@
 		<echo>Start compilation of Visual Editor to swc</echo>
 		<compc debug="true" output="${basedir}/bin/VisualEditor-${version}.swc" fork="true"
 			   incremental="true">
-			<arg value="-load-config=${FLEX_HOME}/frameworks/flex-config.xml"/>
+			<arg value="-load-config=${FLEX_HOME}/frameworks/air-config.xml"/>
 			<arg value="-load-config+=${basedir}/compile-config.xml"/>
 			<source-path path-element="${basedir}/src" />
 			<external-library-path file="${FLEX_HOME}/frameworks/libs/experimental.swc" append="true"/>
