--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <project name="VisualEditor" basedir=".">
 	<property name="version" value="0.2.0"/>
 	<property environment="env"/>
-	<property name="FLEX_HOME" value="${env.FLEX_HOME}" />
+	<property name="FLEX_HOME" value="{env.FLEX_HOME}" />
 	<taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/ant/lib/flexTasks.jar"/>
 
 	<target name="main" depends="clean-up-bin, exclude-files, build, clean-up-after-compilation"/>
@@ -24,9 +24,9 @@
 
 	<target name="clean-up-after-compilation">
 		<echo>Clean up after compilation</echo>
-		<move file="${basedir}/temp/VisualEditorApplication-app.xml" todir="${basedir}/src"/>
-		<move file="${basedir}/temp/VisualEditorApplication.mxml" todir="${basedir}/src"/>
-		<move file="${basedir}/temp/VisualEditorWeb.mxml" todir="${basedir}/src"/>
+		<move file="temp/VisualEditorApplication-app.xml" todir="${basedir}/src"/>
+		<move file="temp/VisualEditorApplication.mxml" todir="${basedir}/src"/>
+		<move file="temp/VisualEditorWeb.mxml" todir="${basedir}/src"/>
 		<delete dir="${basedir}/temp"/>
 	</target>
 
