--- a/build.xml
+++ b/build.xml
@@ -3,10 +3,10 @@
 	<property environment="env"/>
 	<property name="FLEX_HOME" value="${env.FLEX_HOME}" />
 	<!--Path to Moonshine IDE libs folder where built swc will be copied. If not exists target
-		copy-bin-to-moonshine won't be fired.-->
-	<!--<property name="MOONSHINE_LIBS_PATH" value=""/>-->
+		copy-bin-to-moonshine won't be fired.
+	<property name="MOONSHINE_LIBS_PATH" value="../Moonshine-IDE/ide/MoonshineDESKTOPevolved/libs"/>-->
 	<property name="SWC_NAME" value="VisualEditor-${version}.swc"/>
-	<property name="IsDebug" value="false" />
+	<property name="IsDebug" value="true" />
 	<taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/ant/lib/flexTasks.jar"/>
 
 	<target name="main" depends="clean-up-bin, exclude-files, build, clean-up-after-compilation, copy-bin-to-moonshine"/>
@@ -48,6 +48,9 @@
 			<external-library-path file="${FLEX_HOME}/frameworks/libs/framework.swc" append="true"/>
 			<external-library-path file="${FLEX_HOME}/frameworks/libs/mx/mx.swc" append="true"/>
 			<include-sources dir="${basedir}/src" includes="*"/>
+			<compiler.library-path dir="${basedir}/libs" append="true">
+				<include name="**/*.swc" />
+			</compiler.library-path>
 		</compc>
 	</target>
 
