--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="VisualEditor" basedir=".">
+<project name="VisualEditor" default="main" basedir=".">
 	<property name="version" value="0.2.0"/>
 	<property environment="env"/>
 	<property name="FLEX_HOME" value="${env.FLEX_HOME}" />
@@ -6,7 +6,7 @@
 		copy-bin-to-moonshine won't be fired.
 	<property name="MOONSHINE_LIBS_PATH" value="../Moonshine-IDE/ide/MoonshineDESKTOPevolved/libs"/>-->
 	<property name="SWC_NAME" value="VisualEditor-${version}.swc"/>
-	<property name="IsDebug" value="true" />
+	<property name="IsDebug" value="false" />
 	<taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/ant/lib/flexTasks.jar"/>
 
 	<target name="main" depends="clean-up-bin, exclude-files, build, clean-up-after-compilation, copy-bin-to-moonshine"/>
