--- a/build.xml
+++ b/build.xml
@@ -50,6 +50,7 @@
 			<external-library-path file="${FLEX_HOME}/frameworks/libs/spark.swc" append="true"/>
 			<external-library-path file="${FLEX_HOME}/frameworks/libs/framework.swc" append="true"/>
 			<external-library-path file="${FLEX_HOME}/frameworks/libs/mx/mx.swc" append="true"/>
+			<external-library-path file="${FLEX_HOME}/frameworks/libs/apache.swc" append="true"/>
 			<include-sources dir="${basedir}/src" includes="*"/>
 		</compc>
 	</target>
