VE Integration: Update AutoCompleteDropDownList with converter
- Update converter lib with latest fixes
(reference prominic/Moonshine-IDE#438)

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ bin/VisualEditor-0.2.0.swc.cache
 bin-debug/
 obj/MockupVisualEditorConfig.xml
 bin/
+IntelliJ_IDEA/IntelliJ_IDEA/idea-C02041AD-F87539B5-flexunit.xml
+IntelliJ_IDEA/idea-C02041AD-F87539B5-flexunit.xml
