--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <project name="VisualEditor" default="main" basedir=".">
 	<property name="version" value="0.2.0"/>
 	<property environment="env"/>
-	<property name="FLEX_HOME" value="" />
+	<property name="FLEX_HOME" value="${env.FLEX_HOME}" />
 	<!--Path to Moonshine IDE libs folder where built swc will be copied. If not exists target
 		copy-bin-to-moonshine won't be fired.
 	<property name="MOONSHINE_LIBS_PATH" value="../Moonshine-IDE/ide/MoonshineDESKTOPevolved/libs"/>-->
