Add to gitignore VisualEditorConverterLib-0.1.0.swc
(reference Moonshine-IDE/Moonshine-IDE#1063)

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ bin/
 .vscode/
 IntelliJ_IDEA/IntelliJ_IDEA/idea-C02041AD-F87539B5-flexunit.xml
 IntelliJ_IDEA/idea-C02041AD-F87539B5-flexunit.xml
+libs/VisualEditorConverterLib-0.1.0.swc
